# Projects

./: CMakeLists.txt  hello_world.cpp  todo_move_me_out.cpp
03.homework/: CMakeLists.txt  check_value.cpp  high_scores.cpp  high_scores.h  high_scores.txt  random_value.cpp
04.homework/: Ball.cpp  Ball.hpp  Painter.cpp  World.cpp  World.hpp
04.homework/black_box/: Application.cpp
05.homework/05.homework/: .gitignor  CMakeLists.txt  IStatistics.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Std.cpp  Std.h  statistics.cpp
06.homework/: CMakeLists.txt  listContainer.h  seqContainer.h
07.homework/: CMakeLists.txt  listContainer.h  listContainer_test.cc  main.cpp  seqContainer.h  seqContainer_test.cc
08.homework/: CMakeLists.txt  main.cpp
